ME_QA_XFLIPKART

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'application'
 
-
 group 'org.example'
 version '1.0-SNAPSHOT'
 
@@ -28,6 +27,18 @@ dependencies {
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
     implementation 'org.seleniumhq.selenium:selenium-java:4.14.0'
 
+    // https://mvnrepository.com/artifact/org.testng/testng
+    testImplementation 'org.testng:testng:7.5'
+}
+test {
+
+    useTestNG() {
+        suites 'src/test/resources/testng.xml'
+    }
+    testLogging {
+        showStandardStreams = true
+        events "PASSED", "FAILED", "SKIPPED"
+    }
 }
 
 //task startScript(type:Exec) {
